# examples

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
books/: README.md
books/backend/: .env  README.md  backend.sqlite  pyproject.toml
books/backend/backend/: di.py  enterypoint.py
books/backend/backend/apps/books/db/: __init__.py  _providers.py  _tables.py  service.py
books/backend/backend/apps/books/gql/: __init__.py  _mutations.py  _query.py
books/backend/backend/core/: __init__.py  appconfig.py
books/backend/backend/gql/: __init__.py  app.py  context.py  dto.py  node.py  schema.graphql  schema.py
books/backend/backend/migrations/: env.py
books/backend/backend/migrations/versions/: 2023-09-05-13-55-03_4adf1154e12e_create_book_table.py  2023-09-06-07-51-27_16e1ace99339_create_book_table.py
books/ui/: .gitignore  CMakeLists.txt  conanfile.py  pyproject.toml
books/ui/src/: app.cpp  app.hpp  main.cpp
books/ui/src/graphql/: operations.graphql  qtgqlconfig.py  schema.graphql
books/ui/src/graphql/__generated__/: AllBooks.cpp  AllBooks.hpp  CMakeLists.txt  CreateBook.cpp  CreateBook.hpp  DeleteBook.cpp  DeleteBook.hpp  schema.hpp
books/ui/src/qml/: BookDelegate.qml  RootRect.qml  TListView.qml  main.qml  playground.qml
books/ui/src/utils/: qml_hot_reload.hpp
countries/: .clangd  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  pyproject.toml
countries/src/: main.cpp
countries/src/graphql/: fetch_schema.py  operations.graphql  qtgqlconfig.py  schema.graphql
countries/src/graphql/__generated__/: CMakeLists.txt  ContinentQuery.cpp  ContinentQuery.hpp  schema.hpp
countries/src/qml/: main.qml  main.qml~
countries_tt/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  pyproject.toml  run_conan.py
countries_tt/profiles/: Linux
countries_tt/src/countries/: App.cpp  App.hpp  main.cpp
countries_tt/src/qml/: main.qml
qtify/: pyproject.toml
spotify/backend/: .env  alembic.ini  backend.sqlite  pyproject.toml  spotify.sqlite
spotify/backend/backend/: db.py  di.py  enterypoint.py  settings.py
spotify/backend/backend/apps/books/: __init__.py
spotify/backend/backend/apps/books/db/: _tables.py  service.py
spotify/backend/backend/apps/books/gql/: _mutations.py  _query.py  types.py
spotify/backend/backend/core/: __init__.py  _providers.py  db.py  settings.py
spotify/backend/backend/core/books/: queries.py  repositories.py
spotify/backend/backend/db/: _context.py  _engine.py  _providers.py
spotify/backend/backend/db/models/: _book.py
spotify/backend/backend/gql/: node.py  schema.py
spotify/backend/backend/migrations/: env.py
spotify/backend/backend/migrations/versions/: 2023-09-04-18-06-04_929691640945_create_book_table.py  2023-09-05-13-46-40_977dbeb706b5_create_book_table.py  2023-09-05-13-55-03_4adf1154e12e_create_book_table.py
