[tool.poetry]
name = "countries"
version = "0.1.0"
description = ""
authors = ["Nir <88795475+nrbnlulu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
conan = "^2.0.9"
aqtinstall = "^3.1.6"
qtgql = {path = "3rdparty/qtgql"}
cmake = "^3.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = ["conanfile.py"]
