[tool.poetry]
name = "countries_example"
version = "0.1.0"
description = "QtGql example using the countries graphql endpoint."
authors = ["Nir <88795475+nrbnlulu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aqtinstall = "^3.1.6"
conan = "^2.0.7"
qtgql = {path = "3rdparty/qtgql"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
